unpackaged/main/default/objects/CICO_Intimation_Line__c/CICO_Intimation_Line__c.object-meta.xml
<CustomObject>
    <label>Intimation Line</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Intimation Line ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intimation Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>