unpackaged/main/default/objects/CICO_Intimation_Line__c/fields/Inspected_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Inspected_Vehicles__c</fullName>
    <label>Inspected Vehicles</label>
    <summaryFilterItems>
        <field>CICO_Vehicle_Spec__c.Inspected__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CICO_Vehicle_Spec__c.Intimation_Line__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>