unpackaged/main/default/objects/CICO_Intimation_Line__c/fields/Intimation_ID__c.field-meta.xml
<CustomField>
    <fullName>Intimation_ID__c</fullName>
    <label>Intimation ID</label>
    <referenceTo>CICO_Intimation__c</referenceTo>
    <relationshipLabel>Intimation Lines</relationshipLabel>
    <relationshipName>Intimation_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>