unpackaged/main/default/objects/CICO_Intimation_Line__c/fields/Intimation_Line_No__c.field-meta.xml
<CustomField>
    <fullName>Intimation_Line_No__c</fullName>
    <label>Intimation Line No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>