unpackaged/main/default/objects/CICO_Intimation_Line__c/fields/Intimation_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Intimation_Quantity__c</fullName>
    <label>Intimation Quantity</label>
    <summaryForeignKey>CICO_Vehicle_Spec__c.Intimation_Line__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>