unpackaged/main/default/objects/CICO_Intimation_Line__c/fields/Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Line_Status__c</fullName>
    <formula>IF( Intimation_Quantity__c ==Inspected_Vehicles__c , &#39;Completed&#39;, &#39;Pending&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Status</label>
    <type>Text</type>
</CustomField>