unpackaged/main/default/objects/CICO_Intimation_Line__c/fields/PO_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>PO_Line_ID__c</fullName>
    <label>PO Line ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>