unpackaged/main/default/objects/CICO_Intimation_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Intimation_Line_No__c</columns>
    <columns>Intimation_ID__c</columns>
    <columns>PO_Line_ID__c</columns>
    <columns>Inspected_Vehicles__c</columns>
    <columns>Intimation_Quantity__c</columns>
    <columns>Line_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>